--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "^4.3.5",
     "@types/styled-components": "^4.1.19",
-    "axios": "0.18.1",
+    "axios": "^0.18.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
