--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2",
+    "styled-reset": "^1.7.1",
     "typescript": "3.6.3"
   },
   "scripts": {
