--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": ["react-app", "airbnb-typescript", "prettier"]
   },
   "browserslist": {
     "production": [
