--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-helmet": "^5.0.11",
     "@types/react-router-dom": "^4.3.5",
     "@types/styled-components": "^4.1.19",
     "axios": "^0.18.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2",
@@ -25,7 +27,11 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ["react-app", "airbnb-typescript", "prettier"]
+    "extends": [
+      "react-app",
+      "airbnb-typescript",
+      "prettier"
+    ]
   },
   "browserslist": {
     "production": [
